removed extra height from #contact

--- a/css/contact/contact.css
+++ b/css/contact/contact.css
@@ -9,7 +9,7 @@ input:-webkit-autofill:focus {
 }
 
 #contact {
-  height: 100vh !important;
+  height: auto !important;
 }
 
 .container-for-contact {
