--- a/css/contact/contact.scss
+++ b/css/contact/contact.scss
@@ -358,8 +358,7 @@ margin-bottom: 4px;
     .success-message {
         position: fixed;
         top: 70%;
-        left: unset;
-        right: 1rem !important;
+        left:1rem;
         // transform: translateX(-50%);
         padding: 1.3rem;
         background-color: #44b566;
@@ -374,9 +373,8 @@ margin-bottom: 4px;
         animation: message-sent 1s ease-in-out;
     }
     .processing{
-        left: unset;
+        left: 1rem;
         top: 70%;
-        right: 1rem;
         font-size: 1.5rem;
         outline: none !important;
         border: none !important;
