--- a/css/home/home.css
+++ b/css/home/home.css
@@ -236,9 +236,8 @@
   font-family: "Ubuntu", sans-serif;
   overflow: hidden;
   cursor: pointer;
-  margin: 2rem;
+  margin: 1rem;
   margin-left: 4rem;
-  padding: 1rem 1.5rem !important;
 }
 
 #cv-download-button-home-id a {
@@ -250,10 +249,10 @@
 }
 
 .slide {
-  margin-top: -1rem;
+  margin-top: 0rem;
   width: 100%;
   height: 100%;
-  left: -210px;
+  left: -230px;
   background: aqua;
   position: absolute;
   display: inline-block;
@@ -267,7 +266,9 @@
 
 #cv-link-for-home {
   transition: all 0.5s ease-Out;
-  font-size: 2.5rem;
+  padding: 1rem 3.5rem;
+  font-size: 1.8rem;
+  display: inline-block;
   font-family: "Ubuntu", sans-serif !important;
   text-decoration: none;
   font-weight: 400;
@@ -384,12 +385,9 @@
   .flex-for-home-left {
     margin-top: -4rem;
   }
-  #cv-download-button-home-id {
-    padding: 0.7rem 1rem !important;
-  }
-  .slide {
-    margin-top: -0.7rem;
-    padding: 1rem 1rem !important;
+  #cv-link-for-home {
+    padding: 1rem 3rem !important;
+    display: inline-block;
   }
   .span-tags {
     font-size: 6rem;
@@ -442,13 +440,6 @@
   }
   .span-tags-5 {
     font-size: 4rem;
-  }
-  #cv-link-for-home {
-    padding: 0.5rem;
-    font-size: 2.5rem;
-  }
-  .spiral img {
-    width: 7rem;
   }
 }
 @media screen and (max-width: 370px) {
