--- a/css/home/home.scss
+++ b/css/home/home.scss
@@ -111,7 +111,7 @@
 
 // ////////////////////
 .sunil2 {
-    
+
     color: transparent;
     background-clip: text !important;
     background: linear-gradient(to right bottom, rgb(0, 255, 255), rgba(29, 228, 162, 1));
@@ -170,7 +170,7 @@
 
 .span1 {
     cursor: text !important;
-   
+
 
 }
 
@@ -205,14 +205,15 @@
 
 }
 
-.span-1-2{
-position: absolute;
-left: 9rem;
-top: 2rem;
-}
-.span-1-1{
+.span-1-2 {
+    position: absolute;
+    left: 9rem;
     top: 2rem;
-position: absolute;
+}
+
+.span-1-1 {
+    top: 2rem;
+    position: absolute;
 }
 
 
@@ -221,7 +222,8 @@ position: absolute;
     width: 45rem;
     height: 40rem;
 }
-.i-am-a-developer-container{
+
+.i-am-a-developer-container {
     margin: 2rem;
     margin-left: 4rem;
 }
@@ -234,6 +236,7 @@ position: absolute;
     font-family: 'Ubuntu', sans-serif !important;
     // display: inline-block;
 }
+
 .developer {
     font-family: "Ubuntu", sans-serif;
     padding-right: .2rem;
@@ -244,34 +247,37 @@ position: absolute;
     // font-family: lucida-hand;
     font-weight: 500;
 }
+
 //the manipulation with javascript is done suing this css for .developer , also available in theme.scss
-    .toggle-before-for-i-am-a-developer-1::after{
-        content: "";
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        background: #191919 !important;
-        border-left: 3px solid aqua;
-        position: absolute;
-        animation: i-am-a-developer 4s steps(16) infinite;
-       
-    }
-    .toggle-before-for-i-am-a-developer-2::after{
-        content: "";
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        background: papayawhip !important;
-        border-left: 3px solid red;
-        position: absolute;
-        animation: i-am-a-developer 4s steps(16) infinite;
-        
-    }
+.toggle-before-for-i-am-a-developer-1::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: #191919 !important;
+    border-left: 3px solid aqua;
+    position: absolute;
+    animation: i-am-a-developer 4s steps(16) infinite;
+
+}
+
+.toggle-before-for-i-am-a-developer-2::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: papayawhip !important;
+    border-left: 3px solid red;
+    position: absolute;
+    animation: i-am-a-developer 4s steps(16) infinite;
+
+}
 
 
 #cv-download-button-home-id {
+
     border: 3px solid aqua;
     position: relative;
     width: fit-content !important;
@@ -279,14 +285,13 @@ position: absolute;
     font-family: 'Ubuntu', sans-serif;
     overflow: hidden;
     cursor: pointer;
-    margin: 2rem;
+    margin: 1rem;
     margin-left: 4rem;
-    padding: 1rem 1.5rem !important;
 }
 
 #cv-download-button-home-id a {
     position: relative;
-    
+
 
 
 }
@@ -296,10 +301,10 @@ position: absolute;
 }
 
 .slide {
-    margin-top: -1rem;
+    margin-top: 0rem;
     width: 100%;
     height: 100%;
-    left: -210px;
+    left: -230px;
     background: aqua;
     position: absolute;
     display: inline-block;
@@ -314,7 +319,9 @@ position: absolute;
 
 #cv-link-for-home {
     transition: all .5s ease-Out;
-    font-size: 2.5rem;
+    padding: 1rem 3.5rem;
+    font-size: 1.8rem;
+    display: inline-block;
     font-family: 'Ubuntu', sans-serif !important;
     text-decoration: none;
     font-weight: 400;
@@ -334,22 +341,25 @@ position: absolute;
 
 
 @media screen and (max-width:980px) {
-    .i-am-a-developer-container{
+    .i-am-a-developer-container {
         margin-top: .7rem;
         margin-left: 1rem;
     }
-    .span-1-2{
+
+    .span-1-2 {
         top: 0;
         left: 0;
         position: relative !important;
-        
-        }
-        .span-1-1{
-            top: 0;
-            left: 0;
+
+    }
+
+    .span-1-1 {
+        top: 0;
+        left: 0;
         position: relative !important;
-        }
-#cv-download-button-home-id {
+    }
+
+    #cv-download-button-home-id {
 
         margin: 1rem;
         margin-top: 2rem;
@@ -379,14 +389,14 @@ position: absolute;
         height: 100vh;
         align-items: flex-start;
         display: flex;
-       
+
         justify-content: center;
         flex-direction: column;
         width: 100%;
         padding-top: 0;
     }
 
-  
+
 
     #i-am-a {
         width: 45rem;
@@ -462,30 +472,28 @@ position: absolute;
 
 @media screen and (max-width:670px)and (min-width:443px) {
 
-   
+
 
     .a-frontend-dev {
         font-size: 2rem;
     }
 
-  
+
 
 
 }
 
 @media screen and (max-width:590px) {
-.flex-for-home-left{
-    margin-top: -4rem;
-}
+    .flex-for-home-left {
+        margin-top: -4rem;
+    }
 
-#cv-download-button-home-id {
-    padding: .7rem 1rem !important;
-}
-.slide{
-    margin-top: -.7rem;
-    padding: 1rem 1rem !important;
+    #cv-link-for-home {
+        padding: 1rem 3rem !important;
+        display: inline-block;
+    }
 
-}
+
 
 
     .span-tags {
@@ -512,7 +520,7 @@ position: absolute;
         font-size: 5rem;
     }
 
- 
+
 
     .a-frontend-dev {
         font-size: 2rem;
@@ -534,7 +542,7 @@ position: absolute;
 }
 
 @media screen and (max-width:443px) {
- 
+
     .span-tags {
         font-size: 4.5rem;
     }
@@ -560,15 +568,8 @@ position: absolute;
     }
 
 
-    #cv-link-for-home {
-        padding: 0.5rem;
-        font-size: 2.5rem;
-    }
 
-    .spiral img {
-        width: 7rem;
 
-    }
 
 }
 
