--- a/css/home/home.scss
+++ b/css/home/home.scss
@@ -278,7 +278,7 @@
 
 #cv-download-button-home-id {
 
-    border: 3px solid aqua;
+    border: 3px solid rgb(92, 243, 243);
     position: relative;
     width: fit-content !important;
     display: inline-block !important;
