--- a/css/home/home.scss
+++ b/css/home/home.scss
@@ -278,7 +278,7 @@
 
 #cv-download-button-home-id {
 
-    border: 3px solid rgb(255, 255, 255);
+    border: 3px solid aqua;
     position: relative;
     width: fit-content !important;
     display: inline-block !important;
