--- a/css/home/home.css
+++ b/css/home/home.css
@@ -228,7 +228,7 @@
 }
 
 #cv-download-button-home-id {
-  border: 3px solid rgb(255, 255, 255);
+  border: 3px solid aqua;
   position: relative;
   width: -moz-fit-content !important;
   width: fit-content !important;
